--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
 
 <body class="body">
 
-<header class="header fixed-block header--fixed">
+<header class="header header--fixed">
     <div class="overlay" data-menu-overlay aria-hidden></div>
     <nav class="header__navigation">
         <div class="header__wrapper-logo">
@@ -221,17 +221,17 @@
                 <li class="burger-banners__item burger-banners__item--small">
                     <div class="burger-banners__card burger-banners__card--light">
                         <span class="burger-banners__icon" style="background-image: url('img/icons/percent.svg');" aria-hidden></span>
-                        <span class="burger-banners__subtitle">
+                        <a class="burger-banners__link" href="#">
                             Акции и скидки
-                        </span>
+                        </a>
                     </div>
                 </li>
                 <li class="burger-banners__item burger-banners__item--small">
                     <div class="burger-banners__card burger-banners__card--dark">
                         <span class="burger-banners__icon" style="background-image: url('img/icons/marker.svg');" aria-hidden></span>
-                        <span class="burger-banners__subtitle">
+                        <a class="burger-banners__link" href="#">
                             Адреса салонов
-                        </span>
+                        </a>
                     </div>
                 </li>
                 <li class="burger-banners__item burger-banners__item--washes burger-banners__item--big">
@@ -874,10 +874,9 @@
          <li class="breadcrumbs__item">
             <a class="breadcrumbs__link" href="#">Главная</a>
             </li>
-             <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="#">Каталог кухонь</a>
-            </li>
             
+             <li class="breadcrumbs__item" aria-current="page">Каталог кухонь</li>
+                
     </ul>
 </div>
 
