--- a/src/html/pages/product-page/_guarantee.html
+++ b/src/html/pages/product-page/_guarantee.html
@@ -5,12 +5,12 @@
             Гарантия
         </div>
     </div>
-    <div class="guarantee-block__info">
-        <h2 class="guarantee-block__title title">
+    <div class="descr-block">
+        <h2 class="descr-block__title title">
             Гарантия 12 лет
         </h2>
-        <div class="guarantee-block__descr">
-            <div class="guarantee-block__text">
+        <div class="descr-block__info">
+            <div class="descr-block__text">
                 <p>
                     Мы используем автоматизированное поточное производство, где полностью исключен ручной труд. Это сводит вероятность производственного брака к нулю. Избыточный запас качества применяется во всех без исключения элементах: в корпусе , фурнитуре, системах открывания-закрывания и невидимых деталях кухни. Это позволяет давать гарантию 12 лет.
                 </p>
