--- a/src/html/pages/product-page/_unique-quality.html
+++ b/src/html/pages/product-page/_unique-quality.html
@@ -5,12 +5,12 @@
             Качество фасадов
         </div>
     </div>
-    <div class="unique-quality__info">
-        <h2 class="unique-quality__title title">
+    <div class="descr-block">
+        <h2 class="descr-block__title title">
             Уникальное качество фасадов
         </h2>
-        <div class="unique-quality__descr">
-            <div class="unique-quality__text">
+        <div class="descr-block__info">
+            <div class="descr-block__text">
                 <p>
                 Фасад толщиной 19 мм с вертикальной фасонной фрезеровкой с полимерным покрытием Экошпон наносимым методом 3D термо формования на основу из МДФ. Тыльная сторона фасада – белая ламинированная. Производство фасадов Россия.
             </p>
