--- a/src/html/pages/home-page/_video-reviews.html
+++ b/src/html/pages/home-page/_video-reviews.html
@@ -18,45 +18,53 @@
             <ul class="video-reviews__items swiper-wrapper">
                 <li class="video-reviews__item swiper-slide">
                     <div class="video-reviews__card">
-                        <div class="video-reviews__video"></div>
+                        <div class="video-reviews__wrapper">
+                            <div class="video-reviews__video">
+                                <iframe src="https://vk.com/video_ext.php?oid=-219054695&id=456239611&hd=2&autoplay=1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                        </div>
                         <div class="video-reviews__content">
                             <h3 class="video-reviews__subtitle">
                                 Как выбрать фурнитуру и корпус?
                             </h3>
                             <div class="video-reviews__text">
                                 <p>
-                                        Рассказываем о главных критериях на примере кухни “Вектор”.
-                                    </p>
+                                    Рассказываем о главных критериях на примере кухни “Вектор”.
+                                </p>
                             </div>
                         </div>
                     </div>
                 </li>
                 <li class="video-reviews__item swiper-slide">
                     <div class="video-reviews__card">
-                        <div class="video-reviews__video"></div>
+                        <div class="video-reviews__video">
+                            <iframe src="https://vk.com/video_ext.php?oid=-219054695&id=456239611&hd=2&autoplay=1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+                        </div>
                         <div class="video-reviews__content">
                             <h3 class="video-reviews__subtitle">
                                 Как выбрать фурнитуру и корпус?
                             </h3>
                             <div class="video-reviews__text">
                                 <p>
-                                        Рассказываем о главных критериях на примере кухни “Вектор”.
-                                    </p>
+                                    Рассказываем о главных критериях на примере кухни “Вектор”.
+                                </p>
                             </div>
                         </div>
                     </div>
                 </li>
                 <li class="video-reviews__item swiper-slide">
                     <div class="video-reviews__card">
-                        <div class="video-reviews__video"></div>
+                        <div class="video-reviews__video">
+                            <iframe src="https://vk.com/video_ext.php?oid=-219054695&id=456239611&hd=2&autoplay=1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+                        </div>
                         <div class="video-reviews__content">
                             <h3 class="video-reviews__subtitle">
                                 Как выбрать фурнитуру и корпус?
                             </h3>
                             <div class="video-reviews__text">
                                 <p>
-                                        Рассказываем о главных критериях на примере кухни “Вектор”.
-                                    </p>
+                                    Рассказываем о главных критериях на примере кухни “Вектор”.
+                                </p>
                             </div>
                         </div>
                     </div>
