--- a/catalog.html
+++ b/catalog.html
@@ -45,14 +45,14 @@
             <div class="header__item">
                 <button class="header__button header__button--menu button" aria-expanded="false" aria-controls="menu-categories" type="button">
                     Кухни и мебель
-                    <svg class="button__icon" aria-hidden>
+                    <svg aria-hidden>
                         <use xlink:href="img/sprite.svg#plus">
                     </svg>
                 </button>
 
                 <a class="header__button header__button--link button" href="#">
                     Акции
-                    <svg class="button__icon" aria-hidden>
+                    <svg aria-hidden>
                         <use xlink:href="img/sprite.svg#arrows-double">
                     </svg>
                 </a>
@@ -443,7 +443,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="nav-menu__category">
+            <!-- <li class="nav-menu__category">
                 <span class="nav-menu__title">
                     Корпусная мебель
                 </span>
@@ -480,9 +480,9 @@
                         <a href="#">Мойки и аксессуары</a>
                     </li>
                 </ul>
-            </li>
+            </li> -->
         </ul>
-        <form class="menu-categories__search form" action="#">
+        <!-- <form class="menu-categories__search form" action="#">
             <div class="form__item">
                 <label class="sr-only" for="nav-menu-search">
                     Введите, что вы хотите найти
@@ -494,13 +494,13 @@
                     </svg>
                 </button>
             </div>
-        </form>
+        </form> -->
     </div>
 </div>
     </nav>
 </header>
 
-<nav class="side-menu fixed-block ">
+<nav class="side-menu fix-block ">
     <ul class="side-menu__items side-menu__items--arrows" data-color="dark">
         <li>
             <a class="side-menu__link" href="#">
@@ -593,7 +593,7 @@
 </nav>
 
 <div class="wrapper">
-    <nav class="menu-mobile fixed-block">
+    <nav class="menu-mobile fix-block">
     <ul class="menu-mobile__items">
         <li class="menu-mobile__item">
             <a class="menu-mobile__link menu-mobile__link--active" href="#">
@@ -875,7 +875,7 @@
             <a class="breadcrumbs__link" href="#">Главная</a>
             </li>
             
-             <li class="breadcrumbs__item" aria-current="page">Каталог кухонь</li>
+             <li class="breadcrumbs__item"><span aria-current="page" aria-disabled>Каталог кухонь</span></li>
                 
     </ul>
 </div>
@@ -1461,7 +1461,7 @@
                 Вопрос-ответ
             </h2>
 
-            <ul class="spollers" data-spollers data-one-spoller>
+            <ul class="spollers" data-spollers="questions-spollers" data-one-spoller>
                 <li class="spollers__item">
                     <button class="spollers__button" type="button" data-spoller-button>
     Срок изготовления проекта?
