--- a/product.html
+++ b/product.html
@@ -45,14 +45,14 @@
             <div class="header__item">
                 <button class="header__button header__button--menu button" aria-expanded="false" aria-controls="menu-categories" type="button">
                     Кухни и мебель
-                    <svg class="button__icon" aria-hidden>
+                    <svg aria-hidden>
                         <use xlink:href="img/sprite.svg#plus">
                     </svg>
                 </button>
 
                 <a class="header__button header__button--link button" href="#">
                     Акции
-                    <svg class="button__icon" aria-hidden>
+                    <svg aria-hidden>
                         <use xlink:href="img/sprite.svg#arrows-double">
                     </svg>
                 </a>
@@ -443,7 +443,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="nav-menu__category">
+            <!-- <li class="nav-menu__category">
                 <span class="nav-menu__title">
                     Корпусная мебель
                 </span>
@@ -480,9 +480,9 @@
                         <a href="#">Мойки и аксессуары</a>
                     </li>
                 </ul>
-            </li>
+            </li> -->
         </ul>
-        <form class="menu-categories__search form" action="#">
+        <!-- <form class="menu-categories__search form" action="#">
             <div class="form__item">
                 <label class="sr-only" for="nav-menu-search">
                     Введите, что вы хотите найти
@@ -494,13 +494,13 @@
                     </svg>
                 </button>
             </div>
-        </form>
+        </form> -->
     </div>
 </div>
     </nav>
 </header>
 
-<nav class="side-menu fixed-block ">
+<nav class="side-menu fix-block ">
     <ul class="side-menu__items side-menu__items--arrows" data-color="dark">
         <li>
             <a class="side-menu__link" href="#">
@@ -593,7 +593,7 @@
 </nav>
 
 <div class="wrapper">
-    <nav class="menu-mobile fixed-block">
+    <nav class="menu-mobile fix-block">
     <ul class="menu-mobile__items">
         <li class="menu-mobile__item">
             <a class="menu-mobile__link menu-mobile__link--active" href="#">
@@ -878,7 +878,7 @@
             <a class="breadcrumbs__link" href="#">Каталог</a>
             </li>
             
-             <li class="breadcrumbs__item" aria-current="page">Велла</li>
+             <li class="breadcrumbs__item"><span aria-current="page" aria-disabled>Велла</span></li>
                 
     </ul>
 </div>
@@ -1114,12 +1114,12 @@
             Гарантия
         </div>
     </div>
-    <div class="guarantee-block__info">
-        <h2 class="guarantee-block__title title">
+    <div class="descr-block">
+        <h2 class="descr-block__title title">
             Гарантия 12 лет
         </h2>
-        <div class="guarantee-block__descr">
-            <div class="guarantee-block__text">
+        <div class="descr-block__info">
+            <div class="descr-block__text">
                 <p>
                     Мы используем автоматизированное поточное производство, где полностью исключен ручной труд. Это сводит вероятность производственного брака к нулю. Избыточный запас качества применяется во всех без исключения элементах: в корпусе , фурнитуре, системах открывания-закрывания и невидимых деталях кухни. Это позволяет давать гарантию 12 лет.
                 </p>
@@ -1142,12 +1142,12 @@
             Качество фасадов
         </div>
     </div>
-    <div class="unique-quality__info">
-        <h2 class="unique-quality__title title">
+    <div class="descr-block">
+        <h2 class="descr-block__title title">
             Уникальное качество фасадов
         </h2>
-        <div class="unique-quality__descr">
-            <div class="unique-quality__text">
+        <div class="descr-block__info">
+            <div class="descr-block__text">
                 <p>
                 Фасад толщиной 19 мм с вертикальной фасонной фрезеровкой с полимерным покрытием Экошпон наносимым методом 3D термо формования на основу из МДФ. Тыльная сторона фасада – белая ламинированная. Производство фасадов Россия.
             </p>
@@ -1936,7 +1936,7 @@
                 Вопрос-ответ
             </h2>
 
-            <ul class="spollers" data-spollers data-one-spoller>
+            <ul class="spollers" data-spollers="questions-spollers" data-one-spoller>
                 <li class="spollers__item">
                     <button class="spollers__button" type="button" data-spoller-button>
     Срок изготовления проекта?
